--- a/main/templates/main/sign_up.html
+++ b/main/templates/main/sign_up.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Reg</h1>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ user_form.as_p }}
         {{ shop_form.as_p }}
